geolog-lang/test/weighted.output
-- tokens
Decl theory (0:6)
AIdent WeightedGraph (7:20)
SKeyword := (21:23)
Block sig (24:27)
Nl (27:28)
AIdent V (30:31)
SKeyword : (32:33)
AKeyword Set (34:37)
Nl (37:38)
AIdent E (40:41)
SKeyword : (42:43)
AIdent V (44:45)
SKeyword -> (46:48)
AIdent V (49:50)
SKeyword -> (51:53)
AKeyword Int (54:57)
SIdent ~> (58:60)
AKeyword Set (61:64)
Nl (64:65)
End end (65:68)
Nl (68:69)
Nl (69:70)
Decl theory (70:76)
AIdent Q (77:78)
LParen (79:80)
AIdent G (80:81)
SKeyword : (82:83)
AIdent WeightedGraph (84:97)
RParen (97:98)
SKeyword := (99:101)
Block sig (102:105)
Nl (105:106)
AIdent x (108:109)
SKeyword : (110:111)
AIdent G (112:113)
Field V (113:115)
Nl (115:116)
AIdent y (118:119)
SKeyword : (120:121)
AIdent G (122:123)
Field V (123:125)
Nl (125:126)
AIdent z (128:129)
SKeyword : (130:131)
AIdent G (132:133)
Field V (133:135)
Nl (135:136)
AIdent e1 (138:140)
SKeyword : (141:142)
AIdent G (143:144)
Field E (144:146)
AIdent x (147:148)
AIdent y (149:150)
Int 1 (151:152)
Nl (152:153)
AIdent e1 (155:157)
SKeyword : (158:159)
AIdent G (160:161)
Field E (161:163)
AIdent y (164:165)
AIdent z (166:167)
Int 3 (168:169)
Nl (169:170)
End end (170:173)
Nl (173:174)
Eof (174:174)

-- notation
Decl theory (0:68)
  Infix (7:68)
    Ident WeightedGraph (7:20)
    Keyword := (21:23)
    Block sig (24:68)
      Infix (30:37)
        Ident V (30:31)
        Keyword : (32:33)
        Keyword Set (34:37)
      Infix (40:64)
        Ident E (40:41)
        Keyword : (42:43)
        Infix (44:64)
          Ident V (44:45)
          Keyword -> (46:48)
          Infix (49:64)
            Ident V (49:50)
            Keyword -> (51:53)
            Infix (54:64)
              Keyword Int (54:57)
              Ident ~> (58:60)
              Keyword Set (61:64)
Decl theory (70:173)
  Infix (77:173)
    App (77:97)
      Ident Q (77:78)
      Infix (80:97)
        Ident G (80:81)
        Keyword : (82:83)
        Ident WeightedGraph (84:97)
    Keyword := (99:101)
    Block sig (102:173)
      Infix (108:115)
        Ident x (108:109)
        Keyword : (110:111)
        App (112:115)
          Ident G (112:113)
          Field V (113:115)
      Infix (118:125)
        Ident y (118:119)
        Keyword : (120:121)
        App (122:125)
          Ident G (122:123)
          Field V (123:125)
      Infix (128:135)
        Ident z (128:129)
        Keyword : (130:131)
        App (132:135)
          Ident G (132:133)
          Field V (133:135)
      Infix (138:152)
        Ident e1 (138:140)
        Keyword : (141:142)
        App (143:152)
          Ident G (143:144)
          Field E (144:146)
          Ident x (147:148)
          Ident y (149:150)
          Int 1 (151:152)
      Infix (155:169)
        Ident e1 (155:157)
        Keyword : (158:159)
        App (160:169)
          Ident G (160:161)
          Field E (161:163)
          Ident y (164:165)
          Ident z (166:167)
          Int 3 (168:169)

-- elaborated


-- messages

warning[W0101]: Defaulted precedence of ~> to the same as +
3 |   E : V -> V -> Int ~> Set
3 |                     ^^

error[E0208]: unexpected notation for term in synthesizing position: Infix
3 |   E : V -> V -> Int ~> Set
3 |                 ^^^^^^^^^^

error[E0201]: identifier WeightedGraph not in scope
6 | theory Q (G : WeightedGraph) := sig
6 |               ^^^^^^^^^^^^^
